[package]
name = "treiber_stack"
version = "1.1.1"
edition = "2021"
authors = ["Tim Boudreau <tim@timboudreau.com>"]
license = "MIT"
description = "A lockless, thread-safe, atomic linked-list."
readme = "README.md"
homepage = "https://github.com/timboudreau/treiber_stack"
repository = "https://github.com/timboudreau/treiber_stack.git"
keywords = ["lockless", "stack", "treiber", "concurrent"]
categories = ["concurrency"]

[lib]
name = "treiber_stack"
path = "src/lib.rs"

[dependencies]
arc-swap = "1.7.1"
